# polyscope-py

./: ..gitmodules.un~  CMakeLists.txt
src/cpp/: core.cpp  floating_quantities.cpp  volume_grid.cpp
src/polyscope/: __init__.py  core.py  curve_network.py  floating_quantities.py  point_cloud.py  surface_mesh.py  volume_grid.py  volume_mesh.py
src/polyscope.egg-info/: PKG-INFO  SOURCES.txt
test/: imgui_demo.py  polyscope_test.py
